<resources>
    <string name="app_name">FertInfo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FertInfo</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_infertilidad">Infertilidad</string>
    <string name="menu_seminograma">Seminograma</string>
    <string name="menu_hormonas">Análisis hormonales</string>
    <string name="menu_genetica">Estudio genético</string>
    <string name="menu_bibliografia">Bibliografía</string>
    <string name="menu_otros">Otros</string>
    <string name="menu_share">Información</string>
    <string name="menu_send">Enviar</string>
    <string name="menu_info">Info</string>
    <string name="infertilidad_titulo0">Infertilidad masculina</string>
    <string name="infertilidad_titulo1">DEFINICIÓN Y TIPOS:</string>
    <string name="infertilidad_parrafo1">
        La infertilidad es la incapacidad de una pareja sexualmente activa de concebir
después un año de relaciones sexuales sin protección (1). Aproximadamente un 15% de
las parejas presentan problemas de fertilidad y en la mitad de los casos, los parámetros
anormales del semen apuntan a un factor asociado a la infertilidad masculina. Las
causas de la infertilidad masculina son heterogéneas, pero más del 40% de los casos
tienen una base genética. Sin embargo, en un 50% de los casos no se determinan
        causas conocidas.
    </string>
    <string name="infertilidad_definicion1">Infertilidad/esterilidad primaria:</string>
    <string name="infertilidad_definicion1_1">Condición por la que una pareja nunca ha conseguido lograr un embarazo o llevarlo
    a término de manera natural (2).</string>
    <string name="infertilidad_definicion2">Infertilidad/esterilidad secundaria:</string>
    <string name="infertilidad_definicion2_1">Condición por la que una pareja, tras un primer embarazo, no consigue quedarse
    embarazada o llevarlo a término otra vez.</string>
    <string name="infertilidad_titulo2">FACTORES ETIOLÓGICOS IMPLICADOS EN LA INFERTILIDAD MASCULINA</string>
    <string name="infertilidad_parrafo2">La infertilidad afecta al 10 a 15% de los hombres durante su edad reproductiva. Se
    ha descrito su naturaleza multifactorial, por lo que se reconoce como un grupo
    clínicamente heterogéneo en el que el diagnóstico puede variar ampliamente entre
    pacientes. Cualquier estudio realizado en varones en el marco reproductivo debe ir
    precedido por un estudio andrológico, que debe incluir al menos la historia clínica y el
    análisis de semen (4). Entre la gran variedad de factores que pueden influir en la
    fertilidad, la práctica clínica se centra en evaluar los factores etiológicos implicados en
    la infertilidad masculina (Tabla 1) (6) , que son los factores adquiridos y genéticos.

    </string>
    <string name="bibliografia_titulo0">BIBLIOGRAFIA:</string>
    <string name="bibliografia_1">(1) Kim SY, Kim HJ, Lee BY, Park SY, Lee HS, Seo JT. Y Chromosome Microdeletions in Infertile Men with Non-obstructive Azoospermia and Severe Oligozoospermia. J Reprod Infertil. 2017;18(3):307-15.</string>
    <string name="bibliografia_2">(2) Zegers-Hochschild F, Adamson GD, Dyer S, Racowsky C, de Mouzon J, Sokol R, et al. The International Glossary on Infertility and Fertility Care, 2017. Hum Reprod. 2017;32(9):1786-801.</string>
    <string name="bibliografia_3">(3) Jungwirth A, Giwercman A, Tournaye H, Diemer T, Kopa Z, Dohle G, et al. European Association of Urology guidelines on Male Infertility: the 2012 update. Eur Urol. 2012;62(2):324-32.</string>
    <string name="bibliografia_4">(4) Alonso-Cerezoa MC, Calero Ruiz M, Chantada-Abal V, de la Fuente-Hernández LA, García-Cobaleda I, García-Ochoa C, et al. Recomendaciones para el estudio genético e inmunológico en la disfunción reproductiva. Med Clin (Barc).2017.</string>
    <string name="bibliografia_5">(5) Gunes S, Arslan MA, Hekim GNT, Asci R. The role of epigenetics in idiopathic male infertility. J Assist Reprod Genet. 2016;33(5):553-69.</string>
    <string name="bibliografia_6">(6) Krausz C. Male infertility: pathogenesis and clinical diagnosis. Best Pract Res Clin Endocrinol Metab. 2011;25(2):271-85.</string>
    <string name="bibliografia_7">(7) Punab M, Poolamets O, Paju P, Vihljajev V, Pomm K, Ladva R, et al. Causes of male infertility: a 9-year prospective monocentre study on 1737 patients with reduced total sperm counts. Hum Reprod. 2017;32(1):18-31.</string>
    <string name="bibliografia_8">(8) Qian L, Li Q, Li H. Effect of hepatitis B virus infection on sperm quality and oxidative stress state of the semen of infertile males. Am J Reprod Immunol. 2016;76(3):183-5.</string>
    <string name="bibliografia_9">(9) Lyu Z, Feng X, Li N, Zhao W, Wei L, Chen Y, et al. Human papillomavirus in semen and the risk for male infertility: a systematic review and meta-analysis. BMC Infect Dis. 2017;17(1):714.</string>
    <string name="bibliografia_10">(10) Martinez F. Update on fertility preservation from the Barcelona International Society for Fertility Preservation-ESHRE-ASRM 2015 expert meeting: indications, results and future perspectives. Fertil Steril. 2017;108(3):407-15.e11.</string>
    <string name="bibliografia_11">(11) Esteves SC. Novel concepts in male factor infertility: clinical and laboratory perspectives. J Assist Reprod Genet. 2016;33(10):1319-35.</string>
    <string name="bibliografia_12">(12) Organization. WH. WHO laboratory manual for the  Examination and processing   of human semen. FIFTH EDITION. ed2010.</string>
    <string name="bibliografia_13">(13) De Braekeleer M, Nguyen MH, Morel F, Perrin A. Genetic aspects of monomorphic teratozoospermia: a review. J Assist Reprod Genet. 2015;32(4):615-23.</string>
    <string name="bibliografia_14">(14) Yatsenko AN, Yatsenko SA, Weedin JW, Lawrence AE, Patel A, Peacock S, et al. Comprehensive 5-year study of cytogenetic aberrations in 668 infertile men. J Urol. 2010;183(4):1636-42.</string>
    <string name="bibliografia_15">(15) Neto FT, Bach PV, Najari BB, Li PS, Goldstein M. Spermatogenesis in humans and its affecting factors. Semin Cell Dev Biol. 2016;59:10-26.</string>
    <string name="bibliografia_16">(16) Tecle E, Gagneux P. Sugar-coated sperm: Unraveling the functions of the mammalian sperm glycocalyx. Mol Reprod Dev. 2015;82(9):635-50.</string>
    <string name="bibliografia_17">(17) Rudolph LM, Bentley GE, Calandra RS, Paredes AH, Tesone M, Wu TJ, et al. Peripheral and Central Mechanisms Involved in the Hormonal Control of Male and Female Reproduction. J Neuroendocrinol. 2016;28(7).</string>
    <string name="bibliografia_18">(18) Nikoobakht MR, Aloosh M, Nikoobakht N, Mehrsay AR, Biniaz F, Karjalian MA. The role of hypothyroidism in male infertility and erectile dysfunction. Urol J. 2012;9(1):405-9.</string>
    <string name="bibliografia_19">(19) Donato J, Frazão R. Interactions between prolactin and kisspeptin to control reproduction. Arch Endocrinol Metab. 2016;60(6):587-95.</string>
    <string name="bibliografia_20">(20) Kelsey TW, McConville L, Edgar AB, Ungurianu AI, Mitchell RT, Anderson RA, et al. Follicle Stimulating Hormone is an accurate predictor of azoospermia in childhood cancer survivors. PLoS One. 2017;12(7):e0181377.</string>
    <string name="bibliografia_21">(21) Manual  de andrología. EdikaMed SL, editor2011.</string>
    <string name="bibliografia_22">(22) Röpke A, Tüttelmann F. MECHANISMS IN ENDOCRINOLOGY: Aberrations of the X chromosome as cause of male infertility. Eur J Endocrinol. 2017;177(5):R249-R59.</string>
    <string name="bibliografia_23">(23) Armanet N, Tosca L, Brisset S, Liehr T, Tachdjian G. Small Supernumerary Marker Chromosomes in Human Infertility. Cytogenet Genome Res. 2015;146(2):100-8.</string>
    <string name="bibliografia_24">(24) Mateos J, Sanjuán S, González M, Rodríguez R, Domínguez C. Prevalencia de cariotipos patológicos en varones infértiles extremeños. Revista Internacional de Andrología. 2011;9(3):95-102.</string>
    <string name="bibliografia_25">(25) Neto FT, Bach PV, Najari BB, Li PS, Goldstein M. Genetics of Male Infertility. Curr Urol Rep. 2016;17(10):70.</string>
    <string name="bibliografia_26">(26) Kanakis GA, Nieschlag E. Klinefelter syndrome: more than hypogonadism. Metabolism. 2018.</string>
    <string name="bibliografia_27">(27) Bonomi M, Rochira V, Pasquali D, Balercia G, Jannini EA, Ferlin A, et al. Klinefelter syndrome (KS): genetics, clinical phenotype and hypogonadism. J Endocrinol Invest. 2017;40(2):123-34.</string>
    <string name="bibliografia_28">(28) Aittomäki K, Wennerholm UB, Bergh C, Selbing A, Hazekamp J, Nygren KG. Safety issues in assisted reproduction technology: should ICSI patients have genetic testing before treatment? A practical proposition to help patient information. Hum Reprod. 2004;19(3):472-6.</string>
    <string name="bibliografia_29">(29) Tahmasbpour E, Balasubramanian D, Agarwal A. A multi-faceted approach to understanding male infertility: gene mutations, molecular defects and assisted reproductive techniques (ART). J Assist Reprod Genet. 2014;31(9):1115-37.</string>
    <string name="bibliografia_30">(30) Ventimiglia E, Capogrosso P, Boeri L, Pederzoli F, Cazzaniga W, Scano R, et al. When to Perform Karyotype Analysis in Infertile Men? Validation of the European Association of Urology Guidelines with the Proposal of a New Predictive Model. Eur Urol. 2016;70(6):920-3.</string>
    <string name="bibliografia_41">(41) Wu QY, Li N, Li WW, Li TF, Zhang C, Cui YX, et al. Clinical, molecular and cytogenetic analysis of 46, XX testicular disorder of sex development with SRY-positive. BMC Urol. 2014;14:70.</string>
    <string name="bibliografia_42">(42) Solé M, Blanco J, Valero O, Vergés L, Vidal F, Sarrate Z. Altered bivalent positioning in metaphase I human spermatocytes from Robertsonian translocation carriers. J Assist Reprod Genet. 2017;34(1):131-8.</string>
    <string name="bibliografia_43">(43) Tarín JJ, García-Pérez MA, Hamatani T, Cano A. Infertility etiologies are genetically and clinically linked with other diseases in single meta-diseases. Reprod Biol Endocrinol. 2015;13:31.</string>
    <string name="bibliografia_44">(44) Yu B, Huang Z. Variations in Antioxidant Genes and Male Infertility. Biomed Res Int. 2015;2015:513196.</string>
    <string name="bibliografia_45">(45) Majzoub A, Arafa M, Starks C, Elbardisi H, Al Said S, Sabanegh E. 46 XX karyotype during male fertility evaluation; case series and literature review. Asian J Androl. 2017;19(2):168-72.</string>
    <string name="bibliografia_46">(46) Ji ZY, Sha YW, Ding L, Li P. Genetic factors contributing to human primary ciliary dyskinesia and male infertility. Asian J Androl. 2017;19(5):515-20.</string>
    <string name="bibliografia_47">(47) Geisinger A, Benavente R. Mutations in Genes Coding for Synaptonemal Complex Proteins and Their Impact on Human Fertility. Cytogenet Genome Res. 2016;150(2):77-85.</string>
    <string name="bibliografia_48">(48) Bieniek JM, Kashanian JA, Deibert CM, Grober ED, Lo KC, Brannigan RE, et al. Influence of increasing body mass index on semen and reproductive hormonal parameters in a multi-institutional cohort of subfertile men. Fertil Steril. 2016;106(5):1070-5.</string>
    <string name="bibliografia_49">(49) Vaamonde D, Garcia-Manso JM, Hackney AC. Impact of physical activity and exercise on male reproductive potential: a new assessment questionnaire. Rev Andal Med Deport. 2017;10(2):79-93.</string>
    <string name="bibliografia_50">(50) Skakkebaek NE, Rajpert-De Meyts E, Buck Louis GM, Toppari J, Andersson AM, Eisenberg ML, et al. Male Reproductive Disorders and Fertility Trends: Influences of Environment and Genetic Susceptibility. Physiol Rev. 2016;96(1):55-97.</string>
</resources>