<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fertinfo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_infertilidad"
        android:name="com.example.fertinfo.ui.infertilidad.InfertilidadFragment"
        android:label="@string/menu_infertilidad"
        tools:layout="@layout/fragment_infertilidad" />

    <fragment
        android:id="@+id/nav_seminograma"
        android:name="com.example.fertinfo.ui.seminograma.SeminogramaFragment"
        android:label="@string/menu_seminograma"
        tools:layout="@layout/fragment_seminograma" />

    <fragment
        android:id="@+id/nav_hormonas"
        android:name="com.example.fertinfo.ui.Hormonas.HormonasFragment"
        android:label="@string/menu_hormonas"
        tools:layout="@layout/fragment_hormonas" />

    <fragment
        android:id="@+id/nav_genetica"
        android:name="com.example.fertinfo.ui.genetic.genetica.GeneticFragment"
        android:label="@string/menu_genetica"
        tools:layout="@layout/fragment_genetic" />
    <fragment
        android:id="@+id/nav_bibliografia"
        android:name="com.example.fertinfo.ui.bibliografia.BibliografiaFragment"
        android:label="@string/menu_bibliografia"
        tools:layout="@layout/fragment_bibliografia" />
    <fragment
        android:id="@+id/nav_otros"
        android:name="com.example.fertinfo.ui.otros.other.OtrosFragment"
        android:label="@string/menu_otros"
        tools:layout="@layout/fragment_otros" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.fertinfo.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.fertinfo.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>